--- a/README
+++ b/README
@@ -12,12 +12,12 @@ with the FEA (Finite Element Analysis) suite [http://www.ansys.com
 ANSYS] (ANalysis SYStem).
 
 It provides 'ANSYS-Mode', an add-on to the
-[http://www.gnu.org/software/emacs/ Gnu Emacs] editor for navigating,
-inspecting and writing APDL files.  The mode offers managing and
+[http://www.gnu.org/software/emacs/ Gnu Emacs] editor for navigating
+in, inspecting and writing APDL files.  The mode offers managing and
 communication capabilities for ANSYS processes, like interactive code
-debugging with the ANSYS solver or listing the current license status,
-etc. Some features are quite sophisticated but the overall
-documentation is targeted for ANSYS users with little Emacs
+debugging with the ANSYS solver/interpreter or listing the current
+license status, etc. Some features are quite sophisticated but the
+overall documentation is targeted for ANSYS users with little Emacs
 experience.
 
 [http://www.gnu.org/home.en.html Gnu] Emacs (Gnu's Not Unix) is an
@@ -27,16 +27,19 @@ for any operating system where ANSYS is running.
 The current stable version (14.0.1) of ANSYS-Mode is available at the
 [http://code.google.com/p/ansys-mode Google Code site] (or paste "wget
 http://code.google.com/p/ansys-mode/downloads/list/ansys-mode-14.0.1.tgz"
-to the console).  You will find in this archive two tutorials, one
-called APDL_tutorial.mac and the other is an introductory presentation
-in PDF (Portable Document Format).  The presentation is also to be
-found in the download section of Google Code or go to the
+to get the sources).  You will find in this archive two tutorials, one
+called APDL_tutorial.pdf and the other is an introductory presentation
+also in PDF (Portable Document Format).  These presentations are also
+to be found separately in the download section of Google Code or go to
+the
 [http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/ansys-mode_tutorial.html
-online version] of it, where you can see the images in a higher
-resolution as in the PDF version.
+introductory online version], where you can see the images in a higher
+resolution as in the PDF.
 
-Please report bugs! Write an email to the maintainer or use Google
-Code's [http://code.google.com/p/ansys-mode/issues/list issues list].
+Please report bugs and inconsistencies in the documention! Write an
+email to the [[mailto:dieter@duenenhof-wilhelm][maintainer]] or use
+Google Code's [http://code.google.com/p/ansys-mode/issues/list issues
+list].
 
 == Requirements ==
 
